# web-app-boilerplate

./: Cargo.toml  Makefile  bacon.toml  env.example
examples/: auth.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241203_073620_create_user_table.rs  m20241205_064650_create_user_profile_table.rs  m20241216_055637_create_permission_table.rs  m20241216_092524_create_role_table.rs  m20241216_095114_create_user_role_table.rs  m20241217_163324_create_user_permission_table.rs
src/: api_response.rs  configgg.rs  error.rs  extractor.rs  json_response.rs  main.rs  repository.rs  routes.rs  serializer.rs  state.rs  utils.rs
src/auth/: auth_service.rs  jwt.rs  mod.rs
src/controller/: auth_controller.rs  mod.rs  permission_controller.rs  role_controller.rs  user_controller.rs  user_role_controller.rs
src/form/: mod.rs  permission_form.rs  role_form.rs  user_form.rs
src/mails/: auth_mails.rs  mod.rs
src/middlewares/: auth_guard.rs
src/models/: mod.rs  permission.rs  role.rs  user.rs  user_permission.rs  user_profile.rs  user_role.rs
src/models/_entities/: mod.rs  permission.rs  prelude.rs  role.rs  user.rs  user_permission.rs  user_profile.rs  user_role.rs
src/repository/: mod.rs  repository_trait.rs  user_repository.rs
src/service/: mod.rs  service_trait.rs  user_service.rs
templates/: user_register_email.stpl
