[package]
name = "web_app_boilerplate"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
# Web framework and HTTP utilities
axum = { version="0.8.0", features=["macros"] }
tower-http = { version="0.6.2", features=["trace"] }

# Asynchronous runtime
tokio = { version="1.42.0", features=["full"] }

# Database and ORM
sqlx = { version="0.8.2", features=["sqlite", "runtime-tokio", "tls-native-tls", "macros", "chrono"] }
sea-orm = { version = "1.1.3", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono" ] }

# Date and time handling
chrono = { version="0.4.39", features=["serde"] }

# Serialization and deserialization
serde = { version = "1.0.217", features=["derive"] }
serde_json = { version="1.0.134" }

# Environment variable management
dotenvy = { version="0.15.7" }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version="0.3.19", features=["env-filter", "ansi"] }

# Input validation
validator = { version="0.19.0", features=["derive"] }

# Async traits
async-trait = "0.1.83"

# Hashing and cryptography
sha2 = { version="0.10.8" }
hmac = "0.12.1"
hex = "0.4.3"
jsonwebtoken = "9.3.0"

# Email handling
lettre = { version="0.11" }

[dev-dependencies]
# Development utilities
tower = { version = "0.5.2", features = ["util"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
